# options

./: .gitignore  CMakeLists.txt
include/: error.h  options.h
lib/: CMakeLists.txt
lib/include/: impl.h
lib/src/: impl.cpp  options.cpp
tests/: CMakeLists.txt  options.cpp
